@@ -854,12 +854,12 @@ public class DesktopInput extends InputHandler{
                 }
             }
             unit.aim(unit.type.faceTarget ? Core.input.mouseWorld() : Tmp.v1.trns(unit.rotation, Core.input.mouseWorld().dst(unit)).add(unit.x, unit.y));
+
+            // if autoboost, invert the behavior of the boost key
+            player.boosting = (Core.settings.getBool("autoboost") != input.keyDown(Binding.boost)) && !movement.isZero();
         }
 
         unit.controlWeapons(true, player.shooting && !boosted);
-
-        // if autoboost, invert the behavior of the boost key
-        player.boosting = (Core.settings.getBool("autoboost") != input.keyDown(Binding.boost)) && !movement.isZero();
         player.mouseX = unit.aimX();
         player.mouseY = unit.aimY();
 
