@@ -467,7 +467,7 @@ public class LExecutor{
                             if (conf instanceof LogicBlock.LogicBuild) {
                                 LogicBlock.LogicBuild build = (LogicBlock.LogicBuild) exec.building(varThis);
                                 if (build != null && !build.isVirus) {
-                                    ui.chatfrag.addMessage(Strings.format("@ has potentially placed a logic virus at (@, @) [accent]SHIFT + @ to view", player.name, build.tileX(), build.tileY(), Core.keybinds.get(Binding.navigate_to_camera).key.name()), null, Color.scarlet.cpy().mul(.75f));
+                                    ui.chatfrag.addMessage(Strings.format("@ has potentially placed a logic virus at (@, @) [accent]SHIFT + @ to view", build.lastAccessed, build.tileX(), build.tileY(), Core.keybinds.get(Binding.navigate_to_camera).key.name()), null, Color.scarlet.cpy().mul(.75f));
                                     control.input.lastVirusWarning = build;
                                     control.input.lastVirusWarnTime = Time.millis();
                                     ClientVars.lastSentPos.set(build.tileX(), build.tileY());
